# plexutil

./: README.md  __main__.py  init.sh  pyproject.toml  requirements.txt  ruff.toml
git-hooks/: pre-commit
sample/manifests/: tv_language_manifest.json
sample/playlists/: music_playlists.json
sample/preferences/: movie_library_preferences.json
src/: Static.py  plex_util_logger.py  static.py
src/config/: MovieLibraryPrefs.json  MusicLibraryPrefs.json  PlexServerSettingPrefs.json  TVLanguageManifest.json  TVLibraryPrefs.json  log_config.yaml
src/core/: Library.py  MovieLibrary.py  MusicLibrary.py  Playlist.py  Prompt.py  TVLibrary.py  library.py  movie_library.py  music_library.py  playlist.py  prompt.py  tv_library.py
src/dto/: LibraryDTO.py  LibraryPreferencesDTO.py  MusicPlaylistDTO.py  MusicPlaylistFileDTO.py  PlexConfigDTO.py  ResourceLocationDTO.py  SongDTO.py  TVLanguageManifestDTO.py  TVLanguageManifestFileDTO.py  UserInstructionsDTO.py  library_dto.py  library_preferences_dto.py  music_playlist_dto.py  music_playlist_file_dto.py  plex_config_dto.py  song_dto.py  tv_language_manifest_dto.py  tv_language_manifest_file_dto.py  user_instructions_dto.py
src/enum/: Agent.py  FileType.py  Language.py  LibraryName.py  LibraryType.py  Scanner.py  UserRequest.py  user_request.py
src/exception/: ExpectedLibraryCountException.py  ImporterException.py  LibraryOpException.py  PlexUtilConfigException.py  expected_library_count_error.py  importer_error.py  library_op_error.py  plex_util_config_error.py
src/plexutil/: __main__.py  plex_util_logger.py  (+1 more)
(+90 files in other folders)
