[build-system]
requires = ["setuptools>=71.1.0","setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "plexutil"
version = "2.1.2"
requires-python = ">=3.12.10"
authors = [
  {name = "Carlos Florez", email = "carlos@florez.co.uk"}
]
maintainers = [
  {name = "Carlos Florez", email = "carlos@florez.co.uk"}
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "PlexAPI==4.17.2",
  "alive-progress==3.3.0",
  "pyyaml==6.0.3",
  "toml==0.10.2",
  "pywin32==311;sys_platform == 'win32'",
  "jsonschema==4.25.1",
  "peewee==3.18.3",
  "colorlog==6.10.1",
  "keyring==25.7.0",
  "cryptography==46.0.3"
]

[project.scripts]
plexutil = "plexutil.__main__:main"

[project.urls]
Repository = "https://github.com/florez-carlos/plexutil"
